--- a/fronted/src/index.html
+++ b/fronted/src/index.html
@@ -11,11 +11,12 @@
   
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCZKLZK7n7PUy_ZFrg6u8iVNc9TjlFbXAo&callback=initMap" async defer></script>
  
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
-<body>
+<body class="mat-typography">
   <app-root></app-root>
-  
- 
 </body>
 </html>
