--- a/fronted/src/index.html
+++ b/fronted/src/index.html
@@ -8,7 +8,8 @@
   <link rel="icon" type="image/x-icon" href="assets/imagenes/confianza.png">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/lux/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-  
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCZKLZK7n7PUy_ZFrg6u8iVNc9TjlFbXAo&callback=initMap" async defer></script>
  
   <link rel="preconnect" href="https://fonts.gstatic.com">
